# ska-ser-scpi

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG  CODEOWNERS  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/src/: conf.py  index.rst
docs/src/api/: index.rst  scpi.drawio  tektronix_tsg4104a.yaml
src/ska_ser_scpi/: __init__.py  attribute_client.py  attribute_payload.py  attribute_server.py  bytes_client.py  bytes_server.py  interface_definition.py  scpi_client.py  scpi_payload.py  scpi_server.py  scpi_simulator.py
tests/: __init__.py
tests/unit/: __init__.py  conftest.py  test_client_stack.py  test_scpi_simulator.py  test_server_stack.py  test_version.py
