[tool.poetry]
name = "ska-ser-scpi"
version = "0.5.0"
description = "Support for SCPI in SKA"
authors = ["Drew Devereux <drew.devereux@skao.int>"]
license = "BSD-3-Clause"
readme = "README.md"

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.10"
ska-ser-devices = "^0.1.1"
numpy = "^1.23"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.17.3"
pylint-junit = "^0.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
darglint = "^1.8.1"
mypy = "^1.4.1"
types-pyyaml = "^6.0.12.9"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^6"
PyYAML = "^6.0"
ska-ser-sphinx-theme = "^0.1.1"
sphinx-autodoc-typehints = "^1.19"
ska-ser-devices = "^0.1.1"
typing-extensions = "^4.5.0"
numpy = "^1.23"

[tool.pytest.ini_options]
addopts = "-v"

[tool.flake8]
docstring-style = "sphinx"
rst-directives = "literalinclude"
rst-roles = ["py:attr", "py:class", "py:const", "py:exc", "py:func", "py:meth", "py:mod"]
enable = "DAR104"
max-complexity = 10

# E203 and W503 conflict with black
ignore = ["E203", "W503"]

[tool.mypy]
mypy_path = "src/:tests/"
show_error_codes = true
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "tango"
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "fixme",
]
enable = ["useless-suppression"]

[tool.pylint.similarities]
min-similarity-lines = 7
ignore-imports = "yes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
